<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@drawable/button_orange_rect_12" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_data_big"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/white">

            </TextView>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_white_rect_revers_12"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_colon"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black">

            </TextView>

                <TextView
                    android:id="@+id/tv_dialog_graf_point_information_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/black"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/date_number">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meaning_big"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black">

                </TextView>

                <TextView
                    android:id="@+id/tv_dialog_graf_point_information_meaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/black"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/number_setting">

                </TextView>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>