<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/white_background"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imgbtn_fragment_meaning_grafs_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_weight="0.1"
            android:padding="15dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/arrow_left2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="6"
            android:text="@string/graf"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/imgbtn_fragment_meaning_grafs_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.1"
            app:srcCompat="@drawable/item_control" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/setting_big" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/number_setting" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_weight="1"
                android:text="@string/meaning_big" />

            <TextView
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_weight="1"
                android:text="@string/humidity" />
        </LinearLayout>
    </LinearLayout>


            <lecho.lib.hellocharts.view.LineChartView
                android:layout_margin="10dp"
                android:id="@+id/chart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </lecho.lib.hellocharts.view.LineChartView>



</LinearLayout>
