<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="5dp"
    android:background="@color/transparent"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:background="@drawable/button_orange_rect_12"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_item_custom_row_layout_money_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:gravity="left"
                android:text="@string/profile_money_left" />

            <TextView
                android:id="@+id/tv_item_custom_row_layout_money_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/hryvnya" />

            <TextView
                android:id="@+id/tv_item_custom_row_layout_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/name" />
        </LinearLayout>

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="50dp"-->
<!--            android:src="@mipmap/ic_launcher_round" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_white_rect_revers_12"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_item_custom_row_layout_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/green"
                android:text="@string/status" />

            <TextView
                android:id="@+id/tv_item_custom_row_layout_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:text="@string/date_number" />
        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/item_label"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center"-->
<!--            android:paddingTop="5dp"-->
<!--            android:textColor="@android:color/black"-->
<!--            android:textSize="15sp" />-->
    </LinearLayout>

</androidx.cardview.widget.CardView>